--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+}
+@font-face {
+  font-family: 'Skol';
+  src: url('../assets/fonts/SKOL/SKOL-SVG.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 #app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  font-family: 'Skol';
 }
 
 a,
@@ -28,6 +39,6 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0;
   }
 }
